@@ -18,6 +18,7 @@ toc::[]
 
 * Add conversions to primitive integer types
 * Add `no_std` support
+* Add conversion from `std::io::ErrorKind`
 
 == {compare-url}/v0.3.3\...v0.3.4[0.3.4] - 2022-11-24
 
